[package]
name = "my-os"
version = "0.1.0"
edition = "2018"
authors = ["Stepanov Denis <stepanov.d.m@yandex.ru>"]
description = "Simple OS on Rust"
license = "Apache-2.0"
repository = "https://github.com/stepanov-denis/my-os/"
keywords = ["os"]
documentation = "https://docs.rs/my-os"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]